# pyafl_qemu_trace

./: README.md  build.py  pyproject.toml  setup.py
docker/: docker-compose.yml
docker/dockerfiles/: AFLplusplus-builder-Dockerfile
pyafl_qemu_trace/: __init__.py
pyafl_qemu_trace/events/: __init__.py  events.py
pyafl_qemu_trace/parse/: __init__.py  parse.py  regs.py
pyafl_qemu_trace/run/: __init__.py  run.py
test/: test_run_x86_64.py
test/binaries/Flight_Routes/: Flight_Routes
test/inputs/: Flight_Routes_10  Flight_Routes_100  Flight_Routes_1001  Flight_Routes_1002  Flight_Routes_1004  Flight_Routes_1008  Flight_Routes_1009  Flight_Routes_101  Flight_Routes_1010  Flight_Routes_1012  Flight_Routes_1013  Flight_Routes_1014  Flight_Routes_1015  Flight_Routes_1019  Flight_Routes_102  Flight_Routes_1020  Flight_Routes_1021  Flight_Routes_1024  Flight_Routes_1027  Flight_Routes_1029  Flight_Routes_103  Flight_Routes_1030  Flight_Routes_1031  Flight_Routes_1038  Flight_Routes_104  Flight_Routes_1042  Flight_Routes_1043  Flight_Routes_1045  Flight_Routes_1046  Flight_Routes_1047  Flight_Routes_1048  Flight_Routes_1049  Flight_Routes_105  Flight_Routes_1051  Flight_Routes_1053  Flight_Routes_1054  Flight_Routes_1056  Flight_Routes_1057  Flight_Routes_1059  Flight_Routes_106  (+2041 more)
utils/: trace_viewer.py
